# can-trial

./: CMakeLists.txt  main.c  rp2040.c  rp2040.code-workspace
CAN-TRIAL/: CMakeLists.txt  main.c
CAN-TRIAL/app_comdef/: CMakeLists.txt
CAN-TRIAL/app_comdef/include/: app_comdef_type.h
CAN-TRIAL/can_driver/: CMakeLists.txt
CAN-TRIAL/can_driver/include/: can_driver_api.h
CAN-TRIAL/can_driver/src/: mcp2515.c  mcp2515.h
CAN-TRIAL/module/board_driver/: CMakeLists.txt
CAN-TRIAL/module/board_driver/include/private/: bd_gpio.h
CAN-TRIAL/module/board_driver/include/public/: board_driver.h  board_driver_result.h
CAN-TRIAL/module/board_driver/src/: bd_gpio.c  board_driver.c
CAN-TRIAL/spi_wrapper/: CMakeLists.txt
CAN-TRIAL/spi_wrapper/include/: spi_wrapper_api.h
CAN-TRIAL/spi_wrapper/src/: spi_wrapper.c
FreeRTOS-Config/: FreeRTOSConfig.h
appl/: main copy.c  main.c
appl-01/: CMakeLists.txt  main.c  main.h  temp.c
appl-01/module/board_driver/: CMakeLists.txt
appl-01/module/board_driver/include/public/: board_driver_api.h
appl-01/module/board_driver/src/: bd_gpio.c
appl-01/module/logger/include/private/: bd_gpio.h
appl-01/module/logger/src/: logger.c
appl-09/: CMakeLists.txt  main.c  main.h  temp.c
appl-09/include/: appl_common.h
appl-09/module/board_driver/: CMakeLists.txt
appl-09/module/board_driver/src/: bd_gpio.c
appl/bk.hardware_driver/: hardware_driver.c  rp2040.c
appl/bk.hardware_driver/include/: hardware_driver.h
appl/hardware_driver/: CMakeLists.txt  hardware_driver.c  rp2040.c
appl/hardware_driver/include/: hardware_driver.h
appl/task_trial/: CMakeLists.txt  main.c
appl/task_trial/include/public/board_driver/: board_driver_result.h
appl/task_trial/module/board_driver/: CMakeLists.txt  bd_api.c  bd_gpio.c
appl_01/: CMakeLists.txt  can_init_task.c  can_irq_task.c  can_rx_task.c  can_tx_task.c  irq_task.c  main.c  main.h  temp.c
appl_01/include/: appl_common.h
appl_01/include/private/: can_rx_task.h  can_tx_task.h  irq_task.h  main.h
appl_01/include/public/: appl_common.h  appl_task.h
appl_01/module/driver/: CMakeLists.txt
appl_01/module/driver/include/private/: mcp2515.h  rp2040.h
appl_01/module/driver/include/public/: driver.h
appl_01/module/driver/src/: driver.c  mcp2515.c  rp2040.c
appl_01/module/logger/: CMakeLists.txt
appl_01/module/logger/include/public/: logger.h  logger_api.h  logger_result.h
appl_01/module/logger/src/: logger.c
appl_09/: main.c  temp.c
appl_09/module/board_driver/src/: bd_api.c
free_rtos/: CMakeLists.txt
hardware_driver/: CMakeLists.txt  hardware_driver.c  mcp2515.c  rp2040.c
hardware_driver/include/: hardware_driver.h
hardware_driver/include/private/: mcp2515.h  rp2040.h  spi.h
include/public/: appl_common.h  hardware_driver.h
my_stdlib/: my_types.h
